--- a/index.css
+++ b/index.css
@@ -14,8 +14,8 @@
     
 body {
       background-color: #373737;
-      width: auto;
-      height: 100%;
+      width: 100vw;
+      height: 100vh;
     }
     
 .header {
@@ -35,11 +35,6 @@ text-decoration: none;
 .header a:hover {
 
 color: #dbdbdb;
-}
-
-.content {
-  max-width: 600px;
-  margin: auto;
 }
 
 
