--- a/portfolio.css
+++ b/portfolio.css
@@ -12,8 +12,8 @@
     
 body {
     background-color: #373737;
-    width: auto;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
 }
 
   .header {
