--- a/about.css
+++ b/about.css
@@ -1,98 +1,106 @@
 /* Citations */
+
+
 /* Fonts are taken from Google Fonts, free to use */
+
+
 /* Skeleton is taken from getskeleton.com */
-/* Social Media icons are imported from Font Awesome Library */ 
-
-#wrapper{
-  width: 960px;
-  margin: 0 auto;
-  position: relative;
-  }
 
 
-  body {
+/* Social Media icons are imported from Font Awesome Library */
+
+#wrapper {
+    width: 960px;
+    margin: 0 auto;
+    position: relative;
+}
+
+body {
     background-color: #373737;
-    width: 100vw;
-    height: 100vh;
-  }
-.header {
+}
 
+.header {
     text-align: center;
     color: #dbdbdb;
     font-family: helvetica;
     display: block;
     font-size: 48px;
-  }
-  
-
-.header a {
-
-color: inherit;
-text-decoration: none;
 }
 
-
-
-
+.header a {
+    color: inherit;
+    text-decoration: none;
+}
 
 hr.style-one {
-  margin-left: 40%;
-  margin-right: 40%;
-  
-  
-  }
+    margin-left: 40%;
+    margin-right: 40%;
+}
 
-
-
-
-.bar{
-  padding-left: 26%;
-  padding-bottom: 2%;
-  font-family: 'Bellefair';
-  
-  }
-
+.bar {
+    padding-left: 26%;
+    padding-bottom: 2%;
+    font-family: 'Bellefair';
+}
 
 .about {
-  text-align: center;
-  font-family: helvetica;
-  font-size: 18px;
-  color: #dbdbdb;
-  padding-top: 2%;
-
-  }
-  
+    text-align: center;
+    font-family: helvetica;
+    font-size: 18px;
+    color: #dbdbdb;
+    padding-top: 2%;
+}
 
 .subabout1 {
-  text-align: center;
-  padding-top: 5%;
-  float: left;
-  font-family: helvetica;
-  font-size: 16px;
-  width: 45%;
-  color: #dbdbdb;
- 
-  }
+    text-align: center;
+    padding-top: 5%;
+    float: left;
+    font-family: helvetica;
+    font-size: 16px;
+    width: 45%;
+    color: #dbdbdb;
+    -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+    animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+}
 
+.subabout2 {
+    text-align: center;
+    padding-top: 15%;
+    float: right;
+    font-family: helvetica;
+    font-size: 16px;
+    width: 40%;
+    color: #dbdbdb;
+    -webkit-animation: text-focus-in 2s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+    animation: text-focus-in 2s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+}
 
-  .subabout2 {
-  text-align: center;
-  padding-top: 15%;
-  float: right;
-  font-family: helvetica;
-  font-size: 16px;
-  width: 40%;
-  color: #dbdbdb;
+@-webkit-keyframes text-focus-in {
+    0% {
+        -webkit-filter: blur(12px);
+        filter: blur(12px);
+        opacity: 0;
     }
- 
-      
+    100% {
+        -webkit-filter: blur(0px);
+        filter: blur(0px);
+        opacity: 1;
+    }
+}
 
- 
- 
+@keyframes text-focus-in {
+    0% {
+        -webkit-filter: blur(12px);
+        filter: blur(12px);
+        opacity: 0;
+    }
+    100% {
+        -webkit-filter: blur(0px);
+        filter: blur(0px);
+        opacity: 1;
+    }
+}
 
-
-
- 
 
 /*   I certify that the content included in this portfolio/website 
   is my own original work (or is cited accurately) and accurate 
